# matsuzawa-20260213

./: Dockerfile  pyproject.toml
.github/prompts/: run_code_generator.md  run_experiment_validator.md
.github/workflows/: run_experiment_validator.yml  run_main_experiment.yml  run_sanity_check.yml  run_visualization.yml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-1-gpt4o-aqua.yaml  proposed-gpt4o-aqua.yaml  proposed-gpt4o-gsm8k.yaml
config/runs/: comparative-1-gpt4o-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
